Fix Wrap function

--- a/GameJS/client/styles/clsGround.css
+++ b/GameJS/client/styles/clsGround.css
@@ -4,8 +4,8 @@
     width:1em;
     height:1em;
     position:absolute;
+    background-image:url("../images/tiles/noTile.png");
     /* transition:background-position linear 1000ms; // recall in */
-    //border: 1px solid green;
 }
 
 .clsGround.tile:hover
@@ -14,7 +14,6 @@
     background-blend-mode: color-dodge;
     //background-blend-mode: saturation;
     //background-blend-mode: color;
-    //border: 1px solid yellow;
 }
 
 
